--- a/ssg-ssr.mdx
+++ b/ssg-ssr.mdx
@@ -1,7 +1,10 @@
 ---
-title: "When to Use Static Generation vs. Server-side Rendering"
-date: "2023-03-17"
-tags: ['next.js, 'nextjs', 'stuff']
+title: "ssg-ssr"
+description: "What I accomplished in 2023 and what's in store for 2024"
+date: "2024-12-30"
+modified: "2024-12-30"
+tags: ["webdev", "javascript", "nextjs", "goals"]
+cover_image: false
 ---
 
 We recommend using **Static Generation** (with and without data) whenever possible because your page can be built once and served by CDN, which makes it much faster than having a server render the page on every request.
